--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/three": "^0.167.1",
+    "eslint": "9.27.0",
+    "eslint-config-next": "15.1.8",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
