I see this error with the app, reported by NextJS, please fix it. The er

--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "sixr-vision",
   "version": "0.2.0",
@@ -56,7 +57,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -65,9 +67,6 @@
     "@types/three": "^0.167.1",
     "eslint": "9.27.0",
     "eslint-config-next": "15.1.8",
-    "genkit-cli": "^1.8.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "genkit-cli": "^1.8.0"
   }
 }
